Hopefully should fix  the link overflow issue

--- a/chat.css
+++ b/chat.css
@@ -17,7 +17,6 @@ body {
 a {
   color: white; 
   text-decoration: underline;
-  display: inline-block;
 }
 
 ::-webkit-scrollbar {
